--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "base64-img": "^1.0.4",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.0",
+    "express-session": "^1.17.1",
+    "is-base64": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "~1.9.1"
+    "method-override": "^3.0.0",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2"
   }
 }
